Rework UI to allow for more configuration
Refactor UI and namespace changes

Significant changes include:
- Namespace has been changed from GameFinderApi to GameFinder
- Added new controls for SessionStart, Swiping, and Tabs
- MainWindow.xaml has been refactored to use the new controls
- .gitignore file updated to ignore JetBrains Rider files
- Code logic in MainWindow.xaml.cs has been moved into individual control classes

--- a/GameFinder/App.xaml
+++ b/GameFinder/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="GameFinderApi.App"
+﻿<Application x:Class="GameFinder.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GameFinderApi"
+             xmlns:local="clr-namespace:GameFinder"
              Startup="Application_Startup"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
     
