--- a/GameFinder/MainWindow.xaml
+++ b/GameFinder/MainWindow.xaml
@@ -1,103 +1,19 @@
-﻿<Window x:Class="GameFinderApi.MainWindow"
+﻿<Window x:Class="GameFinder.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GameFinderApi"
+        xmlns:local="clr-namespace:GameFinder"
         xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
+        xmlns:selfmade="clr-namespace:GameFinder.Controls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="400"
-        KeyDown="Window_Keydown">
+        Title="MainWindow" Height="800" Width="600">
+    
     <Grid Background="#FFEFEFEF">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-        <Border x:Name="ProfileCard"
-                 Width="350"
-                 Height="Auto"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center"
-                 Background="White"
-                 CornerRadius="10"
-                 BorderBrush="Gray"
-                 BorderThickness="2"
-                 Padding="15"
-                 Margin="10">
-            <StackPanel>
-                <TextBlock x:Name="GameNameTextBlock"
-                           Text="Game Name"
-                           FontSize="24"
-                           FontWeight="Bold"
-                           Margin="0,0,0,10"
-                           Foreground="Black"
-                           TextAlignment="Center"/>
-
-                <!-- Game description -->
-                <TextBlock x:Name="DescriptionTextBlock"
-                           Text="Short Description"
-                           FontSize="14"
-                           Margin="0,0,0,10"
-                           TextWrapping="Wrap"
-                           Foreground="DarkGray"/>
-
-                <!-- Game image -->
-                <Image x:Name="GameImage"
-                       Width="300"
-                       Height="150"
-                       Stretch="UniformToFill"
-                       Margin="0,0,0,10"/>
-
-                <TextBlock Text="Genres:"
-                           FontWeight="SemiBold"
-                           Margin="0,10,0,5"/>
-                <TextBlock x:Name="GenresTextBlock"
-                           Text="Genres Info"
-                           FontSize="14"
-                           Margin="0,0,0,10"
-                           TextWrapping="Wrap"
-                           Foreground="DarkGray"/>
-
-                <TextBlock Text="Supported Languages:"
-                           FontWeight="SemiBold"
-                           Margin="0,10,0,5"/>
-                <TextBlock x:Name="LanguagesTextBlock"
-                           Text="Languages Info"
-                           FontSize="14"
-                           Margin="0,0,0,10"
-                           TextWrapping="Wrap"
-                           Foreground="DarkGray"/>
-
-                <TextBlock Text="Recomendations:"
-                           FontWeight="SemiBold"
-                           Margin="0,10,0,5"/>
-                <TextBlock x:Name="PriceTextBlock"
-                           Text="Price Info"
-                           FontSize="14"
-                           Margin="0,0,0,10"
-                           TextWrapping="Wrap"
-                           Foreground="DarkGray"/>
-
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-                    <Button x:Name="Like"
-                            Content="Like"
-                            Width="100"
-                            IsEnabled="False"
-                            Margin="5"
-                            Background="Green"
-                            Foreground="White" 
-                            Click="OnLikeButtonClick"/>
-                    <Button x:Name="Dislike" 
-                            Content="Dislike"
-                            Width="100"
-                            IsEnabled="False"
-                            Margin="5"
-                            Background="Red"
-                            Foreground="White"
-                            Click="OnDislikeButtonClick"/>
-                </StackPanel>
-            </StackPanel>
-        </Border>
+            <selfmade:Tabs/>
     </Grid>
 </Window>
