Enhanced API handler and added SessionLobby control
The API handler has been significantly enhanced with the addition of several new events, methods for session management, and improved connection handling. A new SessionLobby control has also been introduced to manage game sessions. The Config class now includes a Username property as well.

--- a/GameFinder/Controls/SessionStart.xaml
+++ b/GameFinder/Controls/SessionStart.xaml
@@ -10,6 +10,16 @@
         <StackPanel Orientation="Vertical" 
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center">
+            <TextBox
+                x:Name="DisplaynameBox"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Margin="5" 
+                BorderBrush="Gray"
+                HorizontalContentAlignment="Stretch" 
+                Text="Your Display-name"
+                GotFocus="DisplaynameBox_OnGotFocus"
+                LostFocus="DisplaynameBox_OnLostFocus"/>
             <Button 
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Center"
@@ -25,12 +35,15 @@
                 Background="LightCoral"
                 Click="JoinSession_OnClick"/>
             <TextBox
+                x:Name="SessionCodeBox"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 Margin="5" 
                 BorderBrush="Gray"
                 HorizontalContentAlignment="Stretch" 
-                Text="_ _ _ _"/>
+                Text="_ _ _ _"
+                GotFocus="SessionCodeBox_OnGotFocus"
+                LostFocus="SessionCodeBox_OnLostFocus"/>
         </StackPanel>
     </Grid>
 </UserControl>
