--- a/GameFinder/Controls/Tabs.xaml
+++ b/GameFinder/Controls/Tabs.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="600
              ">
-    <Grid>
+    <Grid Background="Black">
         <TabControl>
             <TabItem>
                 <TabItem.Header>
@@ -16,12 +16,24 @@
                         <TextBlock>Home</TextBlock>
                     </StackPanel>
                 </TabItem.Header>
-                <StackPanel>
-                    <TextBlock>Enter some text</TextBlock>
-                    <TextBox Name="textBox1" Width="50"/>
+                <StackPanel Orientation="Vertical" Margin="10">
+                    <TextBlock FontSize="18" FontWeight="Heavy" Padding="5">Login instructions</TextBlock>
+                    <TextBlock TextWrapping="Wrap">Click the login button. It will open a web browser with the Steam login page.Log in and DO NOT CLOSE THE BROWSER YET!</TextBlock>
+                    <TextBlock TextWrapping="Wrap">Once you have logged in, click the refresh button. Once the login has been verified, you can close the web browser</TextBlock>
+                    
+                    <StackPanel Orientation="Vertical" Margin="5">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Margin="10">Login Status:</TextBlock>
+                            <Ellipse Width="20" Height="20" Fill="Red" Margin="10"></Ellipse>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Button Margin="10">Login</Button>
+                            <Button Margin="10">Refresh</Button>
+                        </StackPanel>
+                    </StackPanel>
                 </StackPanel>
             </TabItem>
-            <TabItem>
+            <TabItem Padding="10">
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <Ellipse Width="10" Height="10" Fill="DarkGray" Margin="5"/>
@@ -29,7 +41,7 @@
                     </StackPanel>
                 </TabItem.Header>
                 <TabItem.Content>
-                    <selfmade:Swiping/>
+                    <selfmade:SessionStart/>
                 </TabItem.Content>
             </TabItem>
             <TabItem>
