--- a/GameFinder/Controls/SessionLobby.xaml
+++ b/GameFinder/Controls/SessionLobby.xaml
@@ -1,16 +1,25 @@
-﻿<UserControl x:Class="GameFinder.Controls.SessionLobby"
+﻿
+<UserControl x:Class="GameFinder.Controls.SessionLobby"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity">
     <Grid>
         <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <ListBox x:Name="UsersListBox" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" BorderBrush="Gray">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding Source=_users}" VerticalAlignment="Center" Margin="5"/>
+                        <Border BorderBrush="White" BorderThickness="1">
+                            <TextBlock Text="{Binding}" VerticalAlignment="Center" Margin="5"/>
+                            <Border.ContextMenu>
+                                <ContextMenu>
+                                    <MenuItem Header="Edit"/>
+                                    <MenuItem Header="Delete"/>
+                                </ContextMenu>
+                            </Border.ContextMenu>
+                        </Border>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
