--- a/GameFinder/Controls/SessionLobby.xaml
+++ b/GameFinder/Controls/SessionLobby.xaml
@@ -9,6 +9,11 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity">
     <Grid>
         <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
+                <TextBlock Text="{Binding SessionId, StringFormat='Session Code: {0}'}"
+                           VerticalAlignment="Center" FontWeight="Bold" Margin="0,0,5,0"/>
+                <Button Content="Copy" Padding="5" Click="CopyCode_OnClick"/>
+            </StackPanel>
             <ListBox x:Name="UsersListBox" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" BorderBrush="Gray">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
