--- a/GameFinder/Controls/SessionLobby.xaml
+++ b/GameFinder/Controls/SessionLobby.xaml
@@ -1,38 +1,33 @@
-﻿
 <UserControl x:Class="GameFinder.Controls.SessionLobby"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
              mc:Ignorable="d"
-             Unloaded="SessionLobby_Unloaded"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity">
+             Unloaded="SessionLobby_Unloaded">
     <Grid>
-        <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
-                <TextBlock Text="{Binding SessionId, StringFormat='Session Code: {0}'}"
-                           VerticalAlignment="Center" FontWeight="Bold" Margin="0,0,5,0"/>
-                <Button Content="Copy" Padding="5" Click="CopyCode_OnClick"/>
+        <wpfui:Card Margin="10">
+            <StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
+                    <TextBlock Text="{Binding SessionId, StringFormat='Session Code: {0}'}"
+                               VerticalAlignment="Center" FontWeight="Bold" Margin="0,0,5,0"/>
+                    <wpfui:Button Content="Copy" Padding="5" Appearance="Primary" Click="CopyCode_OnClick"/>
+                </StackPanel>
+                <ListBox x:Name="UsersListBox" Margin="5" BorderBrush="Gray">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="White" BorderThickness="1">
+                                <TextBlock Text="{Binding}" Margin="5"/>
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
+                    <wpfui:Button Content="Leave" Click="LeaveButton_Click" Margin="5" Appearance="Danger"/>
+                    <wpfui:Button Content="Start" Click="StartButton_OnClick" IsEnabled="{Binding IsAdmin}" Margin="5" Appearance="Success"/>
+                </StackPanel>
             </StackPanel>
-            <ListBox x:Name="UsersListBox" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" BorderBrush="Gray">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="White" BorderThickness="1">
-                            <TextBlock Text="{Binding}" VerticalAlignment="Center" Margin="5"/>
-                            <Border.ContextMenu>
-                                <ContextMenu>
-                                    <MenuItem Header="Edit"/>
-                                    <MenuItem Header="Delete"/>
-                                </ContextMenu>
-                            </Border.ContextMenu>
-                        </Border>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Center">
-                <Button Content="Leave" Click="LeaveButton_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Background="LightCoral"/>
-                <Button Content="Start" Click="StartButton_OnClick" IsEnabled="{Binding IsAdmin}" Margin="5" Background="LightGreen" />
-            </StackPanel>
-        </StackPanel>
+        </wpfui:Card>
     </Grid>
 </UserControl>
