--- a/GameFinder/Controls/SessionStart.xaml
+++ b/GameFinder/Controls/SessionStart.xaml
@@ -1,49 +1,37 @@
-﻿<UserControl x:Class="GameFinder.Controls.SessionStart"
+<UserControl x:Class="GameFinder.Controls.SessionStart"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:GameFinder.Controls"
+             xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <StackPanel Orientation="Vertical" 
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
-            <TextBox
-                x:Name="DisplaynameBox"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Margin="5" 
-                BorderBrush="Gray"
-                HorizontalContentAlignment="Stretch" 
-                Text="Your Display-name"
-                GotFocus="DisplaynameBox_OnGotFocus"
-                LostFocus="DisplaynameBox_OnLostFocus"/>
-            <Button 
-                HorizontalAlignment="Center" 
-                VerticalAlignment="Center"
-                Content="Start New Session"
-                Margin="5"
-                Background="LightGreen"
-                Click="StartNewSession_OnClick"/>
-            <Button
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Content="Join Session"
-                Margin="5"
-                Background="LightCoral"
-                Click="JoinSession_OnClick"/>
-            <TextBox
-                x:Name="SessionCodeBox"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Margin="5" 
-                BorderBrush="Gray"
-                HorizontalContentAlignment="Stretch" 
-                Text="_ _ _ _"
-                GotFocus="SessionCodeBox_OnGotFocus"
-                LostFocus="SessionCodeBox_OnLostFocus"/>
-        </StackPanel>
+        <wpfui:Card Width="300" Padding="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <StackPanel Orientation="Vertical">
+                <TextBox x:Name="DisplaynameBox"
+                         Margin="5"
+                         BorderBrush="Gray"
+                         HorizontalContentAlignment="Stretch"
+                         Text="Your Display-name"
+                         GotFocus="DisplaynameBox_OnGotFocus"
+                         LostFocus="DisplaynameBox_OnLostFocus"/>
+                <wpfui:Button Content="Start New Session"
+                               Margin="5"
+                               Appearance="Success"
+                               Click="StartNewSession_OnClick"/>
+                <wpfui:Button Content="Join Session"
+                               Margin="5"
+                               Appearance="Primary"
+                               Click="JoinSession_OnClick"/>
+                <TextBox x:Name="SessionCodeBox"
+                         Margin="5"
+                         BorderBrush="Gray"
+                         HorizontalContentAlignment="Stretch"
+                         Text="_ _ _ _"
+                         GotFocus="SessionCodeBox_OnGotFocus"
+                         LostFocus="SessionCodeBox_OnLostFocus"/>
+            </StackPanel>
+        </wpfui:Card>
     </Grid>
 </UserControl>
