--- a/GameFinder/MainWindow.xaml
+++ b/GameFinder/MainWindow.xaml
@@ -1,18 +1,21 @@
-﻿<Window x:Class="GameFinder.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GameFinder"
-        xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
-        xmlns:selfmade="clr-namespace:GameFinder.Controls"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="600">
-    
-    <Grid Background="#FFEFEFEF">
+<wpfui:FluentWindow x:Class="GameFinder.MainWindow"
+                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                   xmlns:local="clr-namespace:GameFinder"
+                   xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
+                   xmlns:selfmade="clr-namespace:GameFinder.Controls"
+                   mc:Ignorable="d"
+                   Title="GameFinder"
+                   Height="800"
+                   Width="600">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-            <selfmade:Tabs/>
+        <wpfui:TitleBar Title="GameFinder" />
+        <selfmade:Tabs Grid.Row="1" />
     </Grid>
-</Window>
+</wpfui:FluentWindow>
