--- a/GameFinder/Controls/Swiping.xaml
+++ b/GameFinder/Controls/Swiping.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
              KeyDown="Window_Keydown">
-    <Grid Background="#FFEFEFEF">
+    <Grid Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
