--- a/GameFinder/Controls/Swiping.xaml
+++ b/GameFinder/Controls/Swiping.xaml
@@ -9,9 +9,13 @@
              KeyDown="Window_Keydown">
     <Grid Background="Transparent">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <wpfui:Card x:Name="ProfileCard" Width="350" Padding="15" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
+            <wpfui:Button Content="Leave" Click="OnLeaveButtonClick" Appearance="Danger"/>
+        </StackPanel>
+        <wpfui:Card x:Name="ProfileCard" Width="350" Padding="15" Margin="10" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel>
                 <TextBlock x:Name="GameNameTextBlock" Text="Game Name" FontSize="24" FontWeight="Bold" Margin="0,0,0,10" TextAlignment="Center"/>
                 <TextBlock x:Name="DescriptionTextBlock" Text="Short Description" FontSize="14" Margin="0,0,0,10" TextWrapping="Wrap"/>
