--- a/GameFinder/Controls/MatchResult.xaml
+++ b/GameFinder/Controls/MatchResult.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Background="Transparent">
-        <wpfui:Card Padding="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <wpfui:Card Padding="20" Width="400" Margin="20" HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel HorizontalAlignment="Center">
                 <TextBlock x:Name="ResultText" FontSize="24" FontWeight="Bold" Margin="10" TextAlignment="Center"/>
                 <wpfui:Button Content="Back" Click="Back_Click" Width="100" Margin="10" Appearance="Primary"/>
