--- a/GameFinder/Controls/SessionLobby.xaml
+++ b/GameFinder/Controls/SessionLobby.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d"
              Unloaded="SessionLobby_Unloaded">
     <Grid>
-        <wpfui:Card Margin="10">
+        <wpfui:Card Margin="20" Padding="20" Width="400" HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
                     <TextBlock Text="{Binding SessionId, StringFormat='Session Code: {0}'}"
