--- a/GameFinder/Controls/Tabs.xaml
+++ b/GameFinder/Controls/Tabs.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="600">
     <Grid>
-        <TabControl Margin="8">
+        <TabControl Margin="0" Padding="10">
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
@@ -16,7 +16,7 @@
                         <TextBlock>Home</TextBlock>
                     </StackPanel>
                 </TabItem.Header>
-                <wpfui:Card Padding="15" Margin="10">
+                <wpfui:Card Padding="20" Margin="20" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400">
                     <StackPanel Orientation="Vertical" Margin="5">
                         <TextBlock FontSize="18" FontWeight="SemiBold" Padding="5">Login instructions</TextBlock>
                         <TextBlock TextWrapping="Wrap" Margin="0,0,0,5">
@@ -68,7 +68,7 @@
                     </StackPanel>
                 </TabItem.Header>
                 <TabItem.Content>
-                    <wpfui:Card Padding="15" Margin="10">
+                    <wpfui:Card Padding="20" Margin="20" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400">
                         <StackPanel>
                             <TextBlock Text="Steam API Key"/>
                             <TextBox x:Name="ApiKeyBox" Margin="0,0,0,10"/>
