--- a/GameFinder/MainWindow.xaml
+++ b/GameFinder/MainWindow.xaml
@@ -9,7 +9,8 @@
                    mc:Ignorable="d"
                    Title="GameFinder"
                    Height="800"
-                   Width="600">
+                   Width="600"
+                   Background="{DynamicResource WindowBackgroundBrush}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
