--- a/ArcadeMatch.Client/App.xaml
+++ b/ArcadeMatch.Client/App.xaml
@@ -1,10 +1,11 @@
-﻿<Application x:Class="GameFinder.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GameFinder"
-             Startup="Application_Startup"
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
-    
+﻿<Application
+    Startup="Application_Startup"
+    x:Class="GameFinder.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:local="clr-namespace:GameFinder"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
