--- a/ArcadeMatch.Client/Controls/MatchResult.xaml
+++ b/ArcadeMatch.Client/Controls/MatchResult.xaml
@@ -1,16 +1,66 @@
-<UserControl x:Class="GameFinder.Controls.MatchResult"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Background="Transparent">
-        <wpfui:Card Padding="20" Width="400" Margin="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+<UserControl
+    d:DesignHeight="300"
+    d:DesignWidth="300"
+    mc:Ignorable="d"
+    x:Class="GameFinder.Controls.MatchResult"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Grid>
+        <Grid.Background>
+            <RadialGradientBrush Center="0.5,0.3" RadiusX="0.8" RadiusY="0.8">
+                <GradientStop Color="#1E1E1E" Offset="0" />
+                <GradientStop Color="#0F0F0F" Offset="1" />
+            </RadialGradientBrush>
+        </Grid.Background>
+
+        <wpfui:Card
+            HorizontalAlignment="Center"
+            Margin="20"
+            Padding="40"
+            VerticalAlignment="Center"
+            Width="500">
             <StackPanel HorizontalAlignment="Center">
-                <TextBlock x:Name="ResultText" FontSize="24" FontWeight="Bold" Margin="10" TextAlignment="Center"/>
-                <wpfui:Button Content="Back" Click="Back_Click" Width="100" Margin="10" Appearance="Primary"/>
+                <!--  Celebration Icon  -->
+                <Border
+                    Background="{DynamicResource AccentBrush}"
+                    CornerRadius="50"
+                    Height="100"
+                    Margin="0,0,0,25"
+                    Width="100">
+                    <wpfui:SymbolIcon
+                        FontSize="50"
+                        Foreground="White"
+                        Symbol="Trophy24" />
+                </Border>
+
+                <!--  Result Text  -->
+                <TextBlock
+                    FontSize="28"
+                    FontWeight="Bold"
+                    Foreground="{DynamicResource AccentBrush}"
+                    LineHeight="35"
+                    Margin="0,0,0,20"
+                    TextAlignment="Center"
+                    x:Name="ResultText" />
+
+                <!--  Description  -->
+                <TextBlock
+                    Margin="0,0,0,30"
+                    Style="{DynamicResource BodyTextStyle}"
+                    Text="🎉 Great choice! This game was selected by your group."
+                    TextAlignment="Center" />
+
+                <!--  Back Button  -->
+                <wpfui:Button
+                    Appearance="Primary"
+                    Click="Back_Click"
+                    Content="🏠 Back to Home"
+                    FontSize="16"
+                    FontWeight="SemiBold"
+                    Padding="25,15" />
             </StackPanel>
         </wpfui:Card>
     </Grid>
