--- a/ArcadeMatch.Client/MainWindow.xaml
+++ b/ArcadeMatch.Client/MainWindow.xaml
@@ -1,23 +1,23 @@
-<wpfui:FluentWindow x:Class="GameFinder.MainWindow"
-                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                   xmlns:local="clr-namespace:GameFinder"
-                   xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
-                   xmlns:selfmade="clr-namespace:GameFinder.Controls"
-                   mc:Ignorable="d"
-                   Title="GameFinder"
-                   ExtendsContentIntoTitleBar="True"
-                   Height="800"
-                   Width="600"
-                   Background="{DynamicResource WindowBackgroundBrush}">
+<wpfui:FluentWindow
+    Background="{DynamicResource WindowBackgroundBrush}"
+    Height="800"
+    Title="GameFinder"
+    Width="600"
+    mc:Ignorable="d"
+    x:Class="GameFinder.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:GameFinder"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:selfmade="clr-namespace:GameFinder.Controls"
+    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <wpfui:TitleBar x:Name="AppTitleBar" Title="GameFinder" />
+        <wpfui:TitleBar Title="GameFinder" x:Name="AppTitleBar" />
         <selfmade:Tabs Grid.Row="1" />
     </Grid>
 </wpfui:FluentWindow>
