--- a/ArcadeMatch.Avalonia/Controls/SessionStart.axaml
+++ b/ArcadeMatch.Avalonia/Controls/SessionStart.axaml
@@ -5,9 +5,9 @@
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="450" Spacing="20">
             <TextBlock Text="Join or Create Session" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"/>
             <TextBlock Text="Display Name"/>
-            <TextBox x:Name="DisplaynameBox"/>
-            <Button Content="🎮 Start New Session" HorizontalAlignment="Stretch"/>
-            <Button Content="🤝 Join Existing Session" HorizontalAlignment="Stretch"/>
+            <TextBox x:Name="DisplaynameBox" LostFocus="DisplaynameBox_LostFocus"/>
+            <Button Content="🎮 Start New Session" HorizontalAlignment="Stretch" Click="StartNewSession_OnClick"/>
+            <Button Content="🤝 Join Existing Session" HorizontalAlignment="Stretch" Click="JoinSession_OnClick"/>
             <TextBlock Text="Session Code"/>
             <TextBox x:Name="SessionCodeBox"/>
         </StackPanel>
